--- a/views/index.html
+++ b/views/index.html
@@ -288,20 +288,69 @@
 		</div>
 		<div class='row text-center'>
 			<div class='portfolio-items section'>
-					<div class='portfolio-item games'>
-						<!--img class='img-responsive' src='../resources/portfolio/luminosity.png'></img-->
+				<div class='portfolio-item games' ng-mouseenter='showTabs(0)' ng-mouseleave='hideTabs(0)'>
+					<div class='portfolio-tabs'>
+						<a class='portfolio-tab text' ng-show='hovered == 0' href='http://www.facebook.com' target='_blank'>Live</a>
+						<a class='portfolio-tab text' ng-show='hovered == 0' href='http://www.facebook.com' target='_blank'>Git</a>
+						<a class='portfolio-tab portfolio-tab-right text' ng-show='hovered == 0' href='http://www.facebook.com' target='_blank'>+</a>
 					</div>
-					<div class='portfolio-item web' ng-mouseenter='itemHover=true;' ng-mouseleave='itemHover=false;'>
-						<span class='portfolio-tab' ng-show='itemHover'>Live</span>
-						<span class='portfolio-tab' ng-show='itemHover'>Git</span>
-						<span class='portfolio-tab' ng-show='itemHover'>More</span>
+					<img class='img-responsive' src='../resources/portfolio/luminosity.png'></img>
+				</div>
+				<div class='portfolio-item games' ng-mouseenter='showTabs(1)' ng-mouseleave='hideTabs(1)'>
+					<div class='portfolio-tabs'>
+						<a class='portfolio-tab text' ng-show='hovered == 1' href='http://www.facebook.com' target='_blank'>Live</a>
+						<a class='portfolio-tab text' ng-show='hovered == 1' href='http://www.facebook.com' target='_blank'>Git</a>
+						<a class='portfolio-tab portfolio-tab-right text' ng-show='hovered == 1' href='http://www.facebook.com' target='_blank'>+</a>
 					</div>
-					<div class='portfolio-item games'></div>
-					<div class='portfolio-item games'></div>
-					<div class='portfolio-item graphics'></div>
-					<div class='portfolio-item graphics'></div>
-					<div class='portfolio-item games'></div>
-					<div class='portfolio-item games'></div>
+					<img class='img-responsive' src='../resources/portfolio/luminosity.png'></img>
+				</div>
+				<div class='portfolio-item games' ng-mouseenter='showTabs(2)' ng-mouseleave='hideTabs(2)'>
+					<div class='portfolio-tabs'>
+						<a class='portfolio-tab text' ng-show='hovered == 2' href='http://www.facebook.com' target='_blank'>Live</a>
+						<a class='portfolio-tab text' ng-show='hovered == 2' href='http://www.facebook.com' target='_blank'>Git</a>
+						<a class='portfolio-tab portfolio-tab-right text' ng-show='hovered == 2' href='http://www.facebook.com' target='_blank'>+</a>
+					</div>
+					<img class='img-responsive' src='../resources/portfolio/luminosity.png'></img>
+				</div>
+				<div class='portfolio-item games' ng-mouseenter='showTabs(3)' ng-mouseleave='hideTabs(3)'>
+					<div class='portfolio-tabs'>
+						<a class='portfolio-tab text' ng-show='hovered == 3' href='http://www.facebook.com' target='_blank'>Live</a>
+						<a class='portfolio-tab text' ng-show='hovered == 3' href='http://www.facebook.com' target='_blank'>Git</a>
+						<a class='portfolio-tab portfolio-tab-right text' ng-show='hovered == 3' href='http://www.facebook.com' target='_blank'>+</a>
+					</div>
+					<img class='img-responsive' src='../resources/portfolio/luminosity.png'></img>
+				</div>
+				<div class='portfolio-item games' ng-mouseenter='showTabs(4)' ng-mouseleave='hideTabs(4)'>
+					<div class='portfolio-tabs'>
+						<a class='portfolio-tab text' ng-show='hovered == 4' href='http://www.facebook.com' target='_blank'>Live</a>
+						<a class='portfolio-tab text' ng-show='hovered == 4' href='http://www.facebook.com' target='_blank'>Git</a>
+						<a class='portfolio-tab portfolio-tab-right text' ng-show='hovered == 4' href='http://www.facebook.com' target='_blank'>+</a>
+					</div>
+					<img class='img-responsive' src='../resources/portfolio/luminosity.png'></img>
+				</div>
+				<div class='portfolio-item games' ng-mouseenter='showTabs(5)' ng-mouseleave='hideTabs(5)'>
+					<div class='portfolio-tabs'>
+						<a class='portfolio-tab text' ng-show='hovered == 5' href='http://www.facebook.com' target='_blank'>Live</a>
+						<a class='portfolio-tab text' ng-show='hovered == 5' href='http://www.facebook.com' target='_blank'>Git</a>
+						<a class='portfolio-tab portfolio-tab-right text' ng-show='hovered == 5' href='http://www.facebook.com' target='_blank'>+</a>
+					</div>
+					<img class='img-responsive' src='../resources/portfolio/luminosity.png'></img>
+				</div>
+				<div class='portfolio-item games' ng-mouseenter='showTabs(6)' ng-mouseleave='hideTabs(6)'>
+					<div class='portfolio-tabs'>
+						<a class='portfolio-tab text' ng-show='hovered == 6' href='http://www.facebook.com' target='_blank'>Live</a>
+						<a class='portfolio-tab text' ng-show='hovered == 6' href='http://www.facebook.com' target='_blank'>Git</a>
+						<a class='portfolio-tab portfolio-tab-right text' ng-show='hovered == 6' href='http://www.facebook.com' target='_blank'>+</a>
+					</div>
+					<img class='img-responsive' src='../resources/portfolio/luminosity.png'></img>
+				</div>
+				<div class='portfolio-item games' ng-mouseenter='showTabs(7)' ng-mouseleave='hideTabs(7)'>
+					<div class='portfolio-tabs'>
+						<a class='portfolio-tab text' ng-show='hovered == 7' href='http://www.facebook.com' target='_blank'>Live</a>
+						<a class='portfolio-tab text' ng-show='hovered == 7' href='http://www.facebook.com' target='_blank'>Git</a>
+						<a class='portfolio-tab portfolio-tab-right text' ng-show='hovered == 7' href='http://www.facebook.com' target='_blank'>+</a>
+					</div>
+					<img class='img-responsive' src='../resources/portfolio/luminosity.png'></img>
 				</div>
 			</div>
 		</div>
