--- a/views/index.html
+++ b/views/index.html
@@ -296,7 +296,7 @@
 					</div>
 					<img class='img-responsive' src='../resources/portfolio/luminosity.png'></img>
 				</div>
-				<div class='portfolio-item games' ng-mouseenter='showTabs(1)' ng-mouseleave='hideTabs(1)'>
+				<div class='portfolio-item web' ng-mouseenter='showTabs(1)' ng-mouseleave='hideTabs(1)'>
 					<div class='portfolio-tabs'>
 						<a class='portfolio-tab text' ng-show='hovered == 1' href='http://www.facebook.com' target='_blank'>Live</a>
 						<a class='portfolio-tab text' ng-show='hovered == 1' href='http://www.facebook.com' target='_blank'>Git</a>
@@ -304,7 +304,7 @@
 					</div>
 					<img class='img-responsive' src='../resources/portfolio/luminosity.png'></img>
 				</div>
-				<div class='portfolio-item games' ng-mouseenter='showTabs(2)' ng-mouseleave='hideTabs(2)'>
+				<div class='portfolio-item graphics' ng-mouseenter='showTabs(2)' ng-mouseleave='hideTabs(2)'>
 					<div class='portfolio-tabs'>
 						<a class='portfolio-tab text' ng-show='hovered == 2' href='http://www.facebook.com' target='_blank'>Live</a>
 						<a class='portfolio-tab text' ng-show='hovered == 2' href='http://www.facebook.com' target='_blank'>Git</a>
@@ -320,7 +320,7 @@
 					</div>
 					<img class='img-responsive' src='../resources/portfolio/luminosity.png'></img>
 				</div>
-				<div class='portfolio-item games' ng-mouseenter='showTabs(4)' ng-mouseleave='hideTabs(4)'>
+				<div class='portfolio-item ai' ng-mouseenter='showTabs(4)' ng-mouseleave='hideTabs(4)'>
 					<div class='portfolio-tabs'>
 						<a class='portfolio-tab text' ng-show='hovered == 4' href='http://www.facebook.com' target='_blank'>Live</a>
 						<a class='portfolio-tab text' ng-show='hovered == 4' href='http://www.facebook.com' target='_blank'>Git</a>
@@ -336,7 +336,7 @@
 					</div>
 					<img class='img-responsive' src='../resources/portfolio/luminosity.png'></img>
 				</div>
-				<div class='portfolio-item games' ng-mouseenter='showTabs(6)' ng-mouseleave='hideTabs(6)'>
+				<div class='portfolio-item web' ng-mouseenter='showTabs(6)' ng-mouseleave='hideTabs(6)'>
 					<div class='portfolio-tabs'>
 						<a class='portfolio-tab text' ng-show='hovered == 6' href='http://www.facebook.com' target='_blank'>Live</a>
 						<a class='portfolio-tab text' ng-show='hovered == 6' href='http://www.facebook.com' target='_blank'>Git</a>
@@ -344,7 +344,7 @@
 					</div>
 					<img class='img-responsive' src='../resources/portfolio/luminosity.png'></img>
 				</div>
-				<div class='portfolio-item games' ng-mouseenter='showTabs(7)' ng-mouseleave='hideTabs(7)'>
+				<div class='portfolio-item web' ng-mouseenter='showTabs(7)' ng-mouseleave='hideTabs(7)'>
 					<div class='portfolio-tabs'>
 						<a class='portfolio-tab text' ng-show='hovered == 7' href='http://www.facebook.com' target='_blank'>Live</a>
 						<a class='portfolio-tab text' ng-show='hovered == 7' href='http://www.facebook.com' target='_blank'>Git</a>
