--- a/views/index.html
+++ b/views/index.html
@@ -288,7 +288,7 @@
 		</div>
 		<div class='row text-center'>
 			<div class='portfolio-items section'>
-				<div class='portfolio-item games' ng-mouseenter='showTabs(0)' ng-mouseleave='hideTabs(0)'>
+				<div class='portfolio-item games ai' ng-mouseenter='showTabs(0)' ng-mouseleave='hideTabs(0)'>
 					<div class='portfolio-tabs'>
 						<a class='portfolio-tab text' ng-show='hovered == 0' href='http://www.facebook.com' target='_blank'>Live</a>
 						<a class='portfolio-tab text' ng-show='hovered == 0' href='http://www.facebook.com' target='_blank'>Git</a>
@@ -312,7 +312,7 @@
 					</div>
 					<img class='img-responsive' src='../resources/portfolio/graphics.png'></img>
 				</div>
-				<div class='portfolio-item games' ng-mouseenter='showTabs(3)' ng-mouseleave='hideTabs(3)'>
+				<div class='portfolio-item games ai' ng-mouseenter='showTabs(3)' ng-mouseleave='hideTabs(3)'>
 					<div class='portfolio-tabs'>
 						<a class='portfolio-tab text' ng-show='hovered == 3' href='http://www.facebook.com' target='_blank'>Live</a>
 						<a class='portfolio-tab text' ng-show='hovered == 3' href='http://www.facebook.com' target='_blank'>Git</a>
