portfolio links in. bg image updated

--- a/views/index.html
+++ b/views/index.html
@@ -290,66 +290,47 @@
 			<div class='portfolio-items section'>
 				<div class='portfolio-item games ai' ng-mouseenter='showTabs(0)' ng-mouseleave='hideTabs(0)'>
 					<div class='portfolio-tabs'>
-						<a class='portfolio-tab text' ng-show='hovered == 0' href='http://games.digipen.edu/downloads/Luminosity_setup?id=1170&download=25896#.U9qUHfldUgQ' target='_blank'>Live</a>
-						<a class='portfolio-tab portfolio-tab-right text' ng-show='hovered == 0' href='http://www.facebook.com' target='_blank'>+</a>
+						<a class='portfolio-tab text' ng-show='hovered == 0' href='http://games.digipen.edu/downloads/Luminosity_setup?id=1170&download=25896#.U9qUHfldUgQ' target='_blank'>Download</a>
+						<a class='portfolio-tab portfolio-tab-right text' ng-show='hovered == 0' href='http://aeprogramming.wordpress.com/games/' target='_blank'>+</a>
 					</div>
 					<img class='img-responsive' src='../resources/portfolio/luminosity.png'></img>
 				</div>
 				<div class='portfolio-item web' ng-mouseenter='showTabs(1)' ng-mouseleave='hideTabs(1)'>
 					<div class='portfolio-tabs'>
-						<a class='portfolio-tab text' ng-show='hovered == 1' href='http://www.facebook.com' target='_blank'>Live</a>
-						<a class='portfolio-tab text' ng-show='hovered == 1' href='http://www.facebook.com' target='_blank'>Git</a>
-						<a class='portfolio-tab portfolio-tab-right text' ng-show='hovered == 1' href='http://www.facebook.com' target='_blank'>+</a>
+						<a class='portfolio-tab text' ng-show='hovered == 1' href='http://adamestelaresume.azurewebsites.net/' target='_blank'>Live</a>
+						<a class='portfolio-tab text' ng-show='hovered == 1' href='https://github.com/aconfee/AdamEstelaResume' target='_blank'>Git</a>
+						<a class='portfolio-tab portfolio-tab-right text' ng-show='hovered == 1' href='http://aeprogramming.wordpress.com/' target='_blank'>+</a>
 					</div>
 					<img class='img-responsive' src='../resources/portfolio/resume_thumb.png'></img>
 				</div>
 				<div class='portfolio-item graphics' ng-mouseenter='showTabs(2)' ng-mouseleave='hideTabs(2)'>
 					<div class='portfolio-tabs'>
-						<a class='portfolio-tab text' ng-show='hovered == 2' href='http://www.facebook.com' target='_blank'>Live</a>
-						<a class='portfolio-tab text' ng-show='hovered == 2' href='http://www.facebook.com' target='_blank'>Git</a>
-						<a class='portfolio-tab portfolio-tab-right text' ng-show='hovered == 2' href='http://www.facebook.com' target='_blank'>+</a>
+						<a class='portfolio-tab text' ng-show='hovered == 2' href='https://www.youtube.com/user/MrAconfee/videos' target='_blank'>Watch</a>
+						<a class='portfolio-tab portfolio-tab-right text' ng-show='hovered == 2' href='http://aeprogramming.wordpress.com/graphics/' target='_blank'>+</a>
 					</div>
 					<img class='img-responsive' src='../resources/portfolio/graphics.png'></img>
 				</div>
 				<div class='portfolio-item games ai' ng-mouseenter='showTabs(3)' ng-mouseleave='hideTabs(3)'>
 					<div class='portfolio-tabs'>
-						<a class='portfolio-tab text' ng-show='hovered == 3' href='http://www.facebook.com' target='_blank'>Live</a>
-						<a class='portfolio-tab text' ng-show='hovered == 3' href='http://www.facebook.com' target='_blank'>Git</a>
-						<a class='portfolio-tab portfolio-tab-right text' ng-show='hovered == 3' href='http://www.facebook.com' target='_blank'>+</a>
+						<a class='portfolio-tab text' ng-show='hovered == 3' href='https://drive.google.com/file/d/0B_AIogCcMET6QWdDYnk0SEtaVE0/edit?usp=sharing' target='_blank'>Download</a>
+						<a class='portfolio-tab text' ng-show='hovered == 3' href='https://www.youtube.com/watch?v=Z6ECBsE5sxo' target='_blank'>Watch</a>
+						<a class='portfolio-tab portfolio-tab-right text' ng-show='hovered == 3' href='http://aeprogramming.wordpress.com/games/' target='_blank'>+</a>
 					</div>
 					<img class='img-responsive' src='../resources/portfolio/survaillent_thumb.png'></img>
 				</div>
 				<div class='portfolio-item ai' ng-mouseenter='showTabs(4)' ng-mouseleave='hideTabs(4)'>
 					<div class='portfolio-tabs'>
-						<a class='portfolio-tab text' ng-show='hovered == 4' href='http://www.facebook.com' target='_blank'>Live</a>
-						<a class='portfolio-tab text' ng-show='hovered == 4' href='http://www.facebook.com' target='_blank'>Git</a>
-						<a class='portfolio-tab portfolio-tab-right text' ng-show='hovered == 4' href='http://www.facebook.com' target='_blank'>+</a>
+						<a class='portfolio-tab text' ng-show='hovered == 4' href='https://www.youtube.com/watch?v=d_7Cx3_slsg&list=UUlfeZAnjyOWyE3ysVMvWlhQ' target='_blank'>Watch</a>
+						<a class='portfolio-tab portfolio-tab-right text' ng-show='hovered == 4' href='http://aeprogramming.wordpress.com/artificial-intelligence/' target='_blank'>+</a>
 					</div>
 					<img class='img-responsive' src='../resources/portfolio/aithumb.png'></img>
 				</div>
 				<div class='portfolio-item games' ng-mouseenter='showTabs(5)' ng-mouseleave='hideTabs(5)'>
 					<div class='portfolio-tabs'>
-						<a class='portfolio-tab text' ng-show='hovered == 5' href='http://www.facebook.com' target='_blank'>Live</a>
-						<a class='portfolio-tab text' ng-show='hovered == 5' href='http://www.facebook.com' target='_blank'>Git</a>
-						<a class='portfolio-tab portfolio-tab-right text' ng-show='hovered == 5' href='http://www.facebook.com' target='_blank'>+</a>
+						<a class='portfolio-tab text' ng-show='hovered == 5' href='http://games.digipen.edu/downloads/WubWubRacerMagic_setup?id=1170&download=26685#.U9qjfPldUgQ' target='_blank'>Download</a>
+						<a class='portfolio-tab portfolio-tab-right text' ng-show='hovered == 5' href='http://aeprogramming.wordpress.com/games/' target='_blank'>+</a>
 					</div>
 					<img class='img-responsive' src='../resources/portfolio/wubwub_thumb.png'></img>
-				</div>
-				<div class='portfolio-item web' ng-mouseenter='showTabs(6)' ng-mouseleave='hideTabs(6)'>
-					<div class='portfolio-tabs'>
-						<a class='portfolio-tab text' ng-show='hovered == 6' href='http://www.facebook.com' target='_blank'>Live</a>
-						<a class='portfolio-tab text' ng-show='hovered == 6' href='http://www.facebook.com' target='_blank'>Git</a>
-						<a class='portfolio-tab portfolio-tab-right text' ng-show='hovered == 6' href='http://www.facebook.com' target='_blank'>+</a>
-					</div>
-					<img class='img-responsive' src='../resources/portfolio/luminosity.png'></img>
-				</div>
-				<div class='portfolio-item web' ng-mouseenter='showTabs(7)' ng-mouseleave='hideTabs(7)'>
-					<div class='portfolio-tabs'>
-						<a class='portfolio-tab text' ng-show='hovered == 7' href='http://www.facebook.com' target='_blank'>Live</a>
-						<a class='portfolio-tab text' ng-show='hovered == 7' href='http://www.facebook.com' target='_blank'>Git</a>
-						<a class='portfolio-tab portfolio-tab-right text' ng-show='hovered == 7' href='http://www.facebook.com' target='_blank'>+</a>
-					</div>
-					<img class='img-responsive' src='../resources/portfolio/luminosity.png'></img>
 				</div>
 			</div>
 		</div>
