hopefully fixed contact form

--- a/views/index.html
+++ b/views/index.html
@@ -373,7 +373,7 @@
 				  </div>
 				  <div class="form-group">
 				    <div class="col-xs-12">
-				      <button id='send-email-button' type="submit" class="btn btn-default btn-lg">Send Message</button>
+				      <input id='send-email-button' name='submit' type="submit" class="btn-lg"></input>
 				    </div>
 				  </div>
 				</form>
