top links fixed. url for images

--- a/styles/main.css
+++ b/styles/main.css
@@ -98,17 +98,50 @@ h2{
 	display:inline-block;
 
 	margin:0 15px;
-}
+	background-repeat: no-repeat;
+	background-position:center;
+	background-size: 50%;
 
-.icon img{
-	margin-top:10px;
-
-	width:25px;
-	height:25px;
+	-webkit-transition: 0.2s ease-in-out;
+    -moz-transition: 0.2s ease-in-out;
+    -o-transition: 0.2s ease-in-out;
+    transition: 0.2s ease-in-out;
 }
 
 .icon:hover{
 	background-color:white;
+}
+
+#git-icon{
+	background-image: url('http://i.imgur.com/2myXYps.png?1');
+}
+
+#git-icon:hover{
+	background-image: url('http://i.imgur.com/HrOTSa0.png');
+}
+
+#linkedin-icon{
+	background-image: url('http://i.imgur.com/DaNrNYd.png');
+}
+
+#linkedin-icon:hover{
+	background-image: url('http://i.imgur.com/EtSyXB5.png');
+}
+
+#youtube-icon{
+	background-image: url('http://i.imgur.com/s544tLm.png');
+}
+
+#youtube-icon:hover{
+	background-image: url('http://i.imgur.com/ldZmQgc.png?1');
+}
+
+#facebook-icon{
+	background-image: url('http://i.imgur.com/4rfOZQf.png');
+}
+
+#facebook-icon:hover{
+	background-image: url('http://i.imgur.com/1cVSDip.png');
 }
 
 .carousel-inner{
