--- a/views/index.html
+++ b/views/index.html
@@ -74,25 +74,10 @@
 
 		<div class='row'>
 			<div class='social-icons'>
-				<a href='https://github.com/aconfee' target="_blank">
-					<div class='icon'>
-						<img src='../resources/icon-github.png'/>
-					</div>
-				</a>
-				<a href='https://www.linkedin.com/profile/view?id=161738073' target="_blank">
-					<div class='icon'>
-						<img src='../resources/icon-linkedin.png'/>
-					</div>
-				</a>
-				<a href='http://aeprogramming.wordpress.com/' target="_blank">
-					<div class='icon'>
-						<img src='../resources/icon-youtube.png'/>
-					</div>
-				</a>
-					<div class='icon'>
-						<img src='../resources/icon-facebook.png' onmouseover="this.src='../resources/icon-facebook-hover.png'" onmouseout="this.src='../resources/icon-facebook.png'"/>
-						<a href='https://www.facebook.com/adam.estela' target="_blank"></a>
-					</div>
+				<a id='git-icon' class='icon' href='https://github.com/aconfee' target="_blank"></a>
+				<a id='linkedin-icon' class='icon' href='https://www.linkedin.com/profile/view?id=161738073' target="_blank"></a>
+				<a id='youtube-icon' class='icon' href='https://www.youtube.com/user/MrAconfee/videos' target="_blank"></a>
+				<a id='facebook-icon' class='icon' href='https://www.facebook.com/adam.estela' target="_blank"></a>
 			</div>
 		</div>
 
@@ -294,7 +279,7 @@
 						<a class='portfolio-tab text' ng-show='hovered == 0' href='http://games.digipen.edu/downloads/Luminosity_setup?id=1170&download=25896#.U9qUHfldUgQ' target='_blank'>Download</a>
 						<a class='portfolio-tab portfolio-tab-right text' ng-show='hovered == 0' href='http://aeprogramming.wordpress.com/games/' target='_blank'>+</a>
 					</div>
-					<img class='img-responsive' src='../resources/portfolio/luminosity.png'></img>
+					<img class='img-responsive' src='http://i.imgur.com/uNk1eNa.png'></img>
 				</div>
 				<div class='portfolio-item web' ng-mouseenter='showTabs(1)' ng-mouseleave='hideTabs(1)'>
 					<div class='portfolio-tabs'>
@@ -302,14 +287,14 @@
 						<a class='portfolio-tab text' ng-show='hovered == 1' href='https://github.com/aconfee/AdamEstelaResume' target='_blank'>Git</a>
 						<a class='portfolio-tab portfolio-tab-right text' ng-show='hovered == 1' href='http://aeprogramming.wordpress.com/' target='_blank'>+</a>
 					</div>
-					<img class='img-responsive' src='../resources/portfolio/resume_thumb.png'></img>
+					<img class='img-responsive' src='http://i.imgur.com/5G1rniF.png'></img>
 				</div>
 				<div class='portfolio-item graphics' ng-mouseenter='showTabs(2)' ng-mouseleave='hideTabs(2)'>
 					<div class='portfolio-tabs'>
 						<a class='portfolio-tab text' ng-show='hovered == 2' href='https://www.youtube.com/user/MrAconfee/videos' target='_blank'>Watch</a>
 						<a class='portfolio-tab portfolio-tab-right text' ng-show='hovered == 2' href='http://aeprogramming.wordpress.com/graphics/' target='_blank'>+</a>
 					</div>
-					<img class='img-responsive' src='../resources/portfolio/graphics.png'></img>
+					<img class='img-responsive' src='http://i.imgur.com/BfX5SeU.png'></img>
 				</div>
 				<div class='portfolio-item games ai' ng-mouseenter='showTabs(3)' ng-mouseleave='hideTabs(3)'>
 					<div class='portfolio-tabs'>
@@ -317,21 +302,21 @@
 						<a class='portfolio-tab text' ng-show='hovered == 3' href='https://www.youtube.com/watch?v=Z6ECBsE5sxo' target='_blank'>Watch</a>
 						<a class='portfolio-tab portfolio-tab-right text' ng-show='hovered == 3' href='http://aeprogramming.wordpress.com/games/' target='_blank'>+</a>
 					</div>
-					<img class='img-responsive' src='../resources/portfolio/survaillent_thumb.png'></img>
+					<img class='img-responsive' src='http://i.imgur.com/GsmJcCv.png'></img>
 				</div>
 				<div class='portfolio-item ai' ng-mouseenter='showTabs(4)' ng-mouseleave='hideTabs(4)'>
 					<div class='portfolio-tabs'>
 						<a class='portfolio-tab text' ng-show='hovered == 4' href='https://www.youtube.com/watch?v=d_7Cx3_slsg&list=UUlfeZAnjyOWyE3ysVMvWlhQ' target='_blank'>Watch</a>
 						<a class='portfolio-tab portfolio-tab-right text' ng-show='hovered == 4' href='http://aeprogramming.wordpress.com/artificial-intelligence/' target='_blank'>+</a>
 					</div>
-					<img class='img-responsive' src='../resources/portfolio/aithumb.png'></img>
+					<img class='img-responsive' src='http://i.imgur.com/lnWdNdd.png'></img>
 				</div>
 				<div class='portfolio-item games' ng-mouseenter='showTabs(5)' ng-mouseleave='hideTabs(5)'>
 					<div class='portfolio-tabs'>
 						<a class='portfolio-tab text' ng-show='hovered == 5' href='http://games.digipen.edu/downloads/WubWubRacerMagic_setup?id=1170&download=26685#.U9qjfPldUgQ' target='_blank'>Download</a>
 						<a class='portfolio-tab portfolio-tab-right text' ng-show='hovered == 5' href='http://aeprogramming.wordpress.com/games/' target='_blank'>+</a>
 					</div>
-					<img class='img-responsive' src='../resources/portfolio/wubwub_thumb.png'></img>
+					<img class='img-responsive' src='http://i.imgur.com/miKmrPJ.png'></img>
 				</div>
 			</div>
 		</div>
