small changes to nav

--- a/views/index.html
+++ b/views/index.html
@@ -50,7 +50,7 @@
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav" id='main-menu' ng-controller='NavController'>
-	        <li ng-click='scrollToSection("#cover-screen")'class='active'><a>Home</a></li>
+	        <li ng-click='scrollToSection("#cover-screen")'><a>Home</a></li>
 	        <li ng-click='scrollToSection("#overview-screen")'><a>Overview</a></li>
 	        <li ng-click='scrollToSection("#skills-screen")'><a>Skills</a></li>
 	        <li ng-click='scrollToSection("#education-screen")'><a>Education</a></li>
