--- a/views/index.html
+++ b/views/index.html
@@ -326,7 +326,7 @@
 			<header class='col-xs-12 text-center section-title'>
 				<h1 class='inverse'>CONTACT</h1>
 				<div class='underline underline-inverse'></div>
-				<h2 class='inverse'>Currently interested in work opportunities.</h2>
+				<h2 class='inverse'>Say hi!</h2>
 			</header>
 		</div>
 		<div class='row'>
