--- a/views/index.html
+++ b/views/index.html
@@ -27,6 +27,7 @@
 	<script>
 	  $(document).ready(function(){
 	    $('.carousel').carousel();
+	    $('.progress').tooltip('toggle');
 	  });
 	</script>
 </head>
@@ -148,9 +149,9 @@
 		</div>
 		<div class='row section'>
 			<div class='col-xs-3 col-xs-offset-2'>
-				<p class='text-header'>LANGUAGES</p>
-				<div class="progress" ng-class="{'progress-selected': $index == selectedLanguage}" ng-repeat='language in languages' ng-click='displayLanguageDescription(language.name); insetLanguageBar($index);'>
-				  <div class="progress-bar progress-bar-success" ng-class="{'progress-selected': $index == selectedLanguage, 'progress-bar-striped active': language.inProgress}" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:{{ language.percent }}">
+				<span class='text-header'>LANGUAGES</span><span ng-show='showTip' class='text' style='margin-top:4px;'>&nbsp;&nbsp;&nbsp;&nbsp;CLICK US!</span>
+				<div class="progress" ng-class="{'progress-selected': $index == selectedLanguage}" ng-repeat='language in languages' ng-click='displayLanguageDescription(language.name); insetLanguageBar($index); hideTip();'>
+				  <div class="progress-bar progress-bar-success" ng-class="{'progress-selected': $index == selectedLanguage, 'progress-bar-striped active': language.inProgress}" role="progressbar" aria-valuenow="{{ language.val }}" aria-valuemin="0" aria-valuemax="100" ng-style="language.percent">
 				    <p>{{ language.name }}</p>
 				  </div>
 				</div>
@@ -169,8 +170,8 @@
 		<div class='row section'>
 			<div class='col-xs-3 col-xs-offset-2'>
 				<p class='text-header'>TOOLS</p>
-				<div class="progress" ng-class="{'progress-selected': $index == selectedTool}" ng-repeat='tool in tools' ng-click='displayToolDescription(tool.name); insetToolBar($index);'>
-				  <div class="progress-bar progress-bar-success" ng-class="{'progress-selected': $index == selectedTool, 'progress-bar-striped active': tool.inProgress}" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:{{ tool.percent }}">
+				<div class="progress" ng-class="{'progress-selected': $index == selectedTool}" ng-repeat='tool in tools' ng-click='displayToolDescription(tool.name); insetToolBar($index); hideTip();'>
+				  <div class="progress-bar progress-bar-success" ng-class="{'progress-selected': $index == selectedTool, 'progress-bar-striped active': tool.inProgress}" role="progressbar" aria-valuenow="{{ tool.val }}" aria-valuemin="0" aria-valuemax="100" ng-style="tool.percent">
 				    <p>{{ tool.name }}</p>
 				  </div>
 				</div>
