--- a/views/index.html
+++ b/views/index.html
@@ -118,7 +118,7 @@
 				<img src="../resources/icon-facebook-hover.png" class="img-responsive">
 			</div>
 			<div class='col-xs-6 col-xs-offset-1 text'>
-				<span class='text-header'>GAMES&nbsp;&nbsp;</span><span>My foundation lies in low level programming (ASM/C/C++) which I used to build several game engines from the ground up with teams of four developers. On these teams I not only acted as developer, but producer, where I ensured complete milestones and product delivery. I built five complete games during my 3.5 years of matriculation and written tens of thousands of lines of code. I've written everything from graphics to AI, and everything in between.  
+				<span class='text-header'>GAMES&nbsp;&nbsp;</span><span>My foundation lies in low level programming (C/C++) which I used to build several game engines from the ground up with teams of four developers. On these teams I not only acted as developer, but producer, where I ensured complete milestones and product delivery. I built five complete games during my 3.5 years of matriculation and have written tens of thousands of lines of code.  
 				</span>
 			</div>
 		</div>
@@ -127,7 +127,7 @@
 				<img src="../resources/icon-facebook-hover.png" class="img-responsive">
 			</div>
 			<div class='col-xs-6 col-xs-offset-1 text'>
-				<span class='text-header'>TEST&nbsp;&nbsp;</span><span>I've been all across the board with testing and am constantly on my toes learning new things. On my first professional project I started as an automated UI tester, but quickly expanded my scope of responsibility to focus on infrastructure. I've worked on our continuous integration pipeline, set up test frameworks for other devs, written tools for other test automators, and, of course, written tests. I've successfully helped reduce bug turn around time and false negatives.</span>
+				<span class='text-header'>TEST&nbsp;&nbsp;</span><span>I am one of two automated testers at PaperG, Inc. Initially, my scope of responsibility included building automated UI tests, but I quickly expanded to focus on infrastructure. I've worked on our continuous integration pipeline, set up test frameworks for other devs, written tools for other test automators, and, of course, written tests. I've successfully helped reduce bug turn around time and false negatives.</span>
 			</div>
 		</div>
 		<div class='row section'>
@@ -135,7 +135,7 @@
 				<img src="../resources/icon-facebook-hover.png" class="img-responsive">
 			</div>
 			<div class='col-xs-6 col-xs-offset-1 text'>
-				<span class='text-header'>WEB&nbsp;&nbsp;</span><span>I'm currently entering the world of web development. While testing at a web service company, I fell in love with web development and natuarlly gravitated toward such roles. I ramped up on development with the help and professional critiques of my co-workers and have started contributing to front end development on a professional level.</span>
+				<span class='text-header'>WEB&nbsp;&nbsp;</span><span>While testing at PaperG, I fell in love with more development oriented tasks. I chased this passion by tirelessly working on solo end-end web applications while receiving professional code reviews. I have now started contributing to front end development on a professional level.</span>
 			</div>
 		</div>
 	</div>
@@ -148,8 +148,11 @@
 			</header>
 		</div>
 		<div class='row section'>
-			<div class='col-xs-3 col-xs-offset-2'>
-				<span class='text-header'>LANGUAGES</span><span ng-show='showTip' class='text' style='margin-top:4px;'>&nbsp;&nbsp;&nbsp;&nbsp;CLICK US!</span>
+			<div class='col-xs-1 col-xs-offset-1'>
+				<div ng-show='showTip' class='text' style='font-weight:bold; margin-top:80px;'>CLICK US!</div>
+			</div>
+			<div class='col-xs-3'>
+				<span class='text-header'>LANGUAGES</span>
 				<div class="progress" ng-class="{'progress-selected': $index == selectedLanguage}" ng-repeat='language in languages' ng-click='displayLanguageDescription(language.name); insetLanguageBar($index); hideTip();'>
 				  <div class="progress-bar progress-bar-success" ng-class="{'progress-selected': $index == selectedLanguage, 'progress-bar-striped active': language.inProgress}" role="progressbar" aria-valuenow="{{ language.val }}" aria-valuemin="0" aria-valuemax="100" ng-style="language.percent">
 				    <p>{{ language.name }}</p>
